--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+YipliGameLib/Assets/Firebase/Plugins/x86_64/FirebaseCppApp-6_8_1.so
