--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,5 @@ YipliGameLib/Temp/UnityLockfile
 YipliGameLib/Temp/UnityLockfile
 YipliGameLib/Library/ArtifactDB
 YipliGameLib/Library/SourceAssetDB
+*.ide
+*.meta
