--- a/YipliGameLib/Packages/manifest.json
+++ b/YipliGameLib/Packages/manifest.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
+    "com.google.external-dependency-manager": "1.2.157",
+    "com.google.firebase.auth": "6.15.2",
+    "com.google.firebase.database": "6.15.2",
+    "com.google.firebase.functions": "6.15.2",
+    "com.google.firebase.storage": "6.15.2",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ads": "3.4.4",
@@ -45,5 +50,14 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  }
+  },
+  "scopedRegistries": [
+    {
+      "name": "Game Package Registry by Google",
+      "url": "https://unityregistry-pa.googleapis.com",
+      "scopes": [
+        "com.google"
+      ]
+    }
+  ]
 }
