Panel Animations: Scale out appearance animation via script
- Loading panel changed to highest order panel in canvas

--- a/YipliGameLib/Assembly-CSharp.csproj
+++ b/YipliGameLib/Assembly-CSharp.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Assets\Scripts\PlayerSelection.cs" />
     <Compile Include="Assets\Scripts\PlayerSession.cs" />
     <Compile Include="Assets\Scripts\PostPlayerSessions.cs" />
+    <Compile Include="Assets\Scripts\SacaleOutApprearance.cs" />
     <Compile Include="Assets\Scripts\ScaleUpdownAnimation.cs" />
     <Compile Include="Assets\Scripts\UserDataPersistence.cs" />
     <Compile Include="Assets\Scripts\YipliAudioManager.cs" />
