--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ YipliGameLib/Library/SourceAssetDB
 *.meta
 YipliGameLib/Temp/UnityLockfile
 YipliGameLib/Assets/Plugins/Windows/PCFMDriver/ikvm-native-win32-x86.dll.meta
+*.meta
