Windows Compatibility and minor fixes
- Removed Anon Sign ins
- Reworked all gamelib UI (fonts, buttons all standardised)
- Game version handling. Number comparison implemented, rathr than only string check

--- a/YipliGameLib/Assembly-CSharp.csproj
+++ b/YipliGameLib/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\ActionAndGameInfo.cs" />
     <Compile Include="Assets\Scripts\BLEControllerEventHandler.cs" />
+    <Compile Include="Assets\Scripts\FileReadWrite.cs" />
     <Compile Include="Assets\Scripts\FirebaseDBHandler.cs" />
     <Compile Include="Assets\Scripts\GamelibSounds.cs" />
     <Compile Include="Assets\Scripts\InitBLE.cs" />
