--- a/YipliGameLib/Packages/manifest.json
+++ b/YipliGameLib/Packages/manifest.json
@@ -14,6 +14,7 @@
     "com.unity.ide.vscode": "1.2.1",
     "com.unity.multiplayer-hlapi": "1.0.6",
     "com.unity.purchasing": "2.0.6",
+    "com.unity.remote-config": "1.0.9",
     "com.unity.test-framework": "1.1.16",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.2.6",
