--- a/YipliGameLib/Unity.TextMeshPro.csproj
+++ b/YipliGameLib/Unity.TextMeshPro.csproj
@@ -426,8 +426,8 @@
     <Reference Include="IKVM.Runtime.JNI">
       <HintPath>C:/Users/User/Documents/Fitmat_Workspace/UP/GL/yipli_game_lib/YipliGameLib/Assets/Plugins/Windows/PCFMDriver/IKVM.Runtime.JNI.dll</HintPath>
     </Reference>
-    <Reference Include="PCFMDriver024-6">
-      <HintPath>C:/Users/User/Documents/Fitmat_Workspace/UP/GL/yipli_game_lib/YipliGameLib/Assets/Plugins/Windows/PCFMDriver/PCFMDriver024-6.dll</HintPath>
+    <Reference Include="PCFMDriver025R">
+      <HintPath>C:/Users/User/Documents/Fitmat_Workspace/UP/GL/yipli_game_lib/YipliGameLib/Assets/Plugins/Windows/PCFMDriver/PCFMDriver025R.dll</HintPath>
     </Reference>
     <Reference Include="Google.IOSResolver_v1.2.157">
       <HintPath>C:/Users/User/Documents/Fitmat_Workspace/UP/GL/yipli_game_lib/YipliGameLib/Library/PackageCache/com.google.external-dependency-manager@1.2.157/ExternalDependencyManager/Editor/Google.IOSResolver_v1.2.157.dll</HintPath>
