Troubleshooting module has startted.
All the required multiplayer scripts are added

--- a/YipliGameLib/Assembly-CSharp.csproj
+++ b/YipliGameLib/Assembly-CSharp.csproj
@@ -87,6 +87,9 @@
     <Compile Include="Assets\Scripts\Vismay\MatInputController.cs" />
     <Compile Include="Assets\Scripts\Vismay\PortTestings.cs" />
     <Compile Include="Assets\Scripts\Vismay\SetOnClickButtonName.cs" />
+    <Compile Include="Assets\Scripts\Vismay\TroubleShootGL.cs" />
+    <Compile Include="Assets\Scripts\Vismay\Troubleshooting\QuestionTrees\QuestionDisplay.cs" />
+    <Compile Include="Assets\Scripts\Vismay\Troubleshooting\QuestionTrees\Questions.cs" />
     <Compile Include="Assets\Scripts\Vismay\TutorialManagerGL.cs" />
     <Compile Include="Assets\Scripts\Vismay\UiButtonSelection.cs" />
     <Compile Include="Assets\Scripts\YipliAudioManager.cs" />
