--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ YipliGameLib/Library/SourceAssetDB
 YipliGameLib/Temp/UnityLockfile
 YipliGameLib/Assets/Plugins/Windows/PCFMDriver/ikvm-native-win32-x86.dll.meta
 *.meta
+YipliGameLib/Assets/TroubleshootingModule/FmResponseLogs.txt
