HTTP Player Session development is going on
Player Selection and Mat selection is done.

--- a/YipliGameLib/Assets/GL/SampleData/trapped_Yipli.json
+++ b/YipliGameLib/Assets/GL/SampleData/trapped_Yipli.json
@@ -1,29 +1,21 @@
 {
-  "android-min-version": "3.01.005",
-  "android-tv-min-version": ",",
-  "android-url": "com.yipli.trapped",
-  "current-version": "4.03.063",
-  "days-before-next-update-prompt": 6,
+  "AndroidMinVersion": "3.01.005",
+  "AndroidTvMinVersion": ",",
+  "CurrentVersion": "4.03.063",
+  "DaysBeforeNextUpdatePrompt": 6,
   "description": "Help yourself to get out of the jungle trap",
-  "display-priority": 5,
-  "dynamic-link": "https://traped.page.link/?apn=com.yipli.trapped&isi=1564424465&ibi=com.yipli.trappedd&link=https://traped.page.link/",
-  "heading-title": "Action Adventures",
-  "icon-img-url": "Trappedpng1.png",
-  "intensity-level": "Hard",
-  "ios-current-version": "4.03.064",
-  "ios-min-version": "4.02.012",
-  "ios-url": "com.yipli.trapped",
-  "is-game-under-maintenance": 1,
-  "maintenance-message": "Game is under maintenance",
-  "mode": "singleplayer",
-  "name": "Trapped",
-  "only-mat-play-mode": ",",
-  "os-list-for-maintanence": ",",
-  "progression": "level-based",
-  "storage-exe-name": "Yipli_Trapped.exe",
-  "type": "FITNESS",
-  "version-update-message": ",",
-  "win-min-version": "4.03.036",
-  "win-registry-key": "trapped",
-  "win-version": "4.03.066"
+  "IconImgUrl": "Trappedpng1.png",
+  "IosCurrentVersion": "4.03.064",
+  "IosMinVersion": "4.02.012",
+  "IsGameUnderMaintenance": 1,
+  "MaintenanceMessage": "Game is under maintenance",
+  "Name": "Trapped",
+  "OnlyMatPlayMode": ",",
+  "OsListForMaintanence": ",",
+  "StorageExeName": "Yipli_Trapped.exe",
+  "Type": "FITNESS",
+  "VersionUpdateMessage": ",",
+  "WinMinVersion": "4.03.036",
+  "WinRegistryKey": "trapped",
+  "WinVersion": "4.03.066"
 }
