--- a/YipliGameLib/Unity.CollabProxy.Editor.csproj
+++ b/YipliGameLib/Unity.CollabProxy.Editor.csproj
@@ -47,7 +47,7 @@
   <PropertyGroup>
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <UnityProjectGenerator>Package</UnityProjectGenerator>
-    <UnityProjectGeneratorVersion>2.0.11</UnityProjectGeneratorVersion>
+    <UnityProjectGeneratorVersion>2.0.16</UnityProjectGeneratorVersion>
     <UnityProjectType>Editor:5</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
     <UnityVersion>2021.1.18f1</UnityVersion>
@@ -424,6 +424,9 @@
     <Reference Include="UnityEditor.Graphs">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2021.1.18f1\Editor\Data\Managed\UnityEditor.Graphs.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEditor.WebGL.Extensions">
+      <HintPath>C:\Program Files\Unity\Hub\Editor\2021.1.18f1\Editor\Data\PlaybackEngines\WebGLSupport\UnityEditor.WebGL.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEditor.Android.Extensions">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2021.1.18f1\Editor\Data\PlaybackEngines\AndroidPlayer\UnityEditor.Android.Extensions.dll</HintPath>
     </Reference>
@@ -439,9 +442,6 @@
     <Reference Include="IKVM.OpenJDK.Nashorn">
       <HintPath>Assets\Plugins\Windows\PCFMDriver\IKVM.OpenJDK.Nashorn.dll</HintPath>
     </Reference>
-    <Reference Include="Google.VersionHandlerImpl_v1.2.164">
-      <HintPath>Assets\ExternalDependencyManager\Editor\Google.VersionHandlerImpl_v1.2.164.dll</HintPath>
-    </Reference>
     <Reference Include="IKVM.OpenJDK.Jdbc">
       <HintPath>Assets\Plugins\Windows\PCFMDriver\IKVM.OpenJDK.Jdbc.dll</HintPath>
     </Reference>
@@ -451,11 +451,11 @@
     <Reference Include="Unity.Analytics.StandardEvents">
       <HintPath>Library\PackageCache\com.unity.analytics@3.5.3\AnalyticsStandardEvents\Unity.Analytics.StandardEvents.dll</HintPath>
     </Reference>
-    <Reference Include="Google.PackageManagerResolver_v1.2.165">
-      <HintPath>Library\PackageCache\com.google.external-dependency-manager@1.2.165\ExternalDependencyManager\Editor\Google.PackageManagerResolver_v1.2.165.dll</HintPath>
-    </Reference>
     <Reference Include="Firebase.Functions">
       <HintPath>Assets\Firebase\Plugins\Firebase.Functions.dll</HintPath>
+    </Reference>
+    <Reference Include="Google.PackageManagerResolver">
+      <HintPath>Assets\ExternalDependencyManager\Editor\1.2.167\Google.PackageManagerResolver.dll</HintPath>
     </Reference>
     <Reference Include="log4netPlastic">
       <HintPath>Library\PackageCache\com.unity.collab-proxy@1.7.1\Lib\Editor\PlasticSCM\log4netPlastic.dll</HintPath>
@@ -469,17 +469,11 @@
     <Reference Include="PCFMDriver025R">
       <HintPath>Assets\Plugins\Windows\PCFMDriver\PCFMDriver025R.dll</HintPath>
     </Reference>
-    <Reference Include="Google.JarResolver_v1.2.164">
-      <HintPath>Assets\ExternalDependencyManager\Editor\Google.JarResolver_v1.2.164.dll</HintPath>
-    </Reference>
     <Reference Include="Unity.Analytics.Editor">
       <HintPath>Library\PackageCache\com.unity.analytics@3.5.3\Unity.Analytics.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Plastic.Antlr3.Runtime">
       <HintPath>Library\PackageCache\com.unity.collab-proxy@1.7.1\Lib\Editor\PlasticSCM\Unity.Plastic.Antlr3.Runtime.dll</HintPath>
-    </Reference>
-    <Reference Include="Google.JarResolver_v1.2.165">
-      <HintPath>Library\PackageCache\com.google.external-dependency-manager@1.2.165\ExternalDependencyManager\Editor\Google.JarResolver_v1.2.165.dll</HintPath>
     </Reference>
     <Reference Include="Firebase.TaskExtension">
       <HintPath>Assets\Firebase\Plugins\Firebase.TaskExtension.dll</HintPath>
@@ -526,9 +520,6 @@
     <Reference Include="Firebase.Analytics">
       <HintPath>Assets\Firebase\Plugins\Firebase.Analytics.dll</HintPath>
     </Reference>
-    <Reference Include="Google.PackageManagerResolver_v1.2.164">
-      <HintPath>Assets\ExternalDependencyManager\Editor\Google.PackageManagerResolver_v1.2.164.dll</HintPath>
-    </Reference>
     <Reference Include="IKVM.OpenJDK.SwingAWT">
       <HintPath>Assets\Plugins\Windows\PCFMDriver\IKVM.OpenJDK.SwingAWT.dll</HintPath>
     </Reference>
@@ -538,14 +529,11 @@
     <Reference Include="IKVM.OpenJDK.XML.Parse">
       <HintPath>Assets\Plugins\Windows\PCFMDriver\IKVM.OpenJDK.XML.Parse.dll</HintPath>
     </Reference>
+    <Reference Include="Google.JarResolver">
+      <HintPath>Assets\ExternalDependencyManager\Editor\1.2.167\Google.JarResolver.dll</HintPath>
+    </Reference>
     <Reference Include="Google.MiniJson">
       <HintPath>Assets\Firebase\Plugins\Google.MiniJson.dll</HintPath>
-    </Reference>
-    <Reference Include="Google.VersionHandlerImpl_v1.2.165">
-      <HintPath>Library\PackageCache\com.google.external-dependency-manager@1.2.165\ExternalDependencyManager\Editor\Google.VersionHandlerImpl_v1.2.165.dll</HintPath>
-    </Reference>
-    <Reference Include="Google.VersionHandler">
-      <HintPath>Library\PackageCache\com.google.external-dependency-manager@1.2.165\ExternalDependencyManager\Editor\Google.VersionHandler.dll</HintPath>
     </Reference>
     <Reference Include="IKVM.AWT.WinForms">
       <HintPath>Assets\Plugins\Windows\PCFMDriver\IKVM.AWT.WinForms.dll</HintPath>
@@ -577,8 +565,8 @@
     <Reference Include="Firebase.Database">
       <HintPath>Assets\Firebase\Plugins\Firebase.Database.dll</HintPath>
     </Reference>
-    <Reference Include="Google.IOSResolver_v1.2.164">
-      <HintPath>Assets\ExternalDependencyManager\Editor\Google.IOSResolver_v1.2.164.dll</HintPath>
+    <Reference Include="Google.VersionHandler">
+      <HintPath>Assets\ExternalDependencyManager\Editor\Google.VersionHandler.dll</HintPath>
     </Reference>
     <Reference Include="IKVM.OpenJDK.Media">
       <HintPath>Assets\Plugins\Windows\PCFMDriver\IKVM.OpenJDK.Media.dll</HintPath>
@@ -588,6 +576,9 @@
     </Reference>
     <Reference Include="IKVM.OpenJDK.Core">
       <HintPath>Assets\Plugins\Windows\PCFMDriver\IKVM.OpenJDK.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Google.IOSResolver">
+      <HintPath>Assets\ExternalDependencyManager\Editor\1.2.167\Google.IOSResolver.dll</HintPath>
     </Reference>
     <Reference Include="IKVM.OpenJDK.Tools">
       <HintPath>Assets\Plugins\Windows\PCFMDriver\IKVM.OpenJDK.Tools.dll</HintPath>
@@ -622,11 +613,11 @@
     <Reference Include="Unity.Tasks">
       <HintPath>Assets\Parse\Plugins\dotNet45\Unity.Tasks.dll</HintPath>
     </Reference>
+    <Reference Include="Google.VersionHandlerImpl">
+      <HintPath>Assets\ExternalDependencyManager\Editor\1.2.167\Google.VersionHandlerImpl.dll</HintPath>
+    </Reference>
     <Reference Include="Firebase.Platform">
       <HintPath>Assets\Firebase\Plugins\Firebase.Platform.dll</HintPath>
-    </Reference>
-    <Reference Include="Google.IOSResolver_v1.2.165">
-      <HintPath>Library\PackageCache\com.google.external-dependency-manager@1.2.165\ExternalDependencyManager\Editor\Google.IOSResolver_v1.2.165.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Compat">
       <HintPath>Assets\Parse\Plugins\dotNet45\Unity.Compat.dll</HintPath>
